--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -180,6 +180,54 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#INTRODUCIR DOS NUMEROS ENTEROS\n",
+        "\n",
+        "a= float(input( \"Indique el primer número: \" )) \n",
+        "b= float(input( \"Indique el segundo número: \" )) \n",
+        "\n",
+        "#COMPROBRA QUE EL PRIMER NUMERO ES MENOR QUE EL SEGUNDO\n",
+        "\n",
+        "if a>b: \n",
+        "  print(f\"El mayor es { a } y el menor es { b } .\" ) \n",
+        "elif  b  >  a : \n",
+        "  print(f\"El mayor es { b } y el menor es { a } .\") \n",
+        "else : \n",
+        "  print(\"Son iguales.\" )\n",
+        "\n",
+        "#MOSTRAR TODOS LOS NUMEROS PARES \n",
+        "\n",
+        "a=int(a)\n",
+        "b=int(b)\n",
+        "if a%2 == 0:\n",
+        "  print(list(range(a,b+1,2)))\n",
+        "else:\n",
+        "  print(list(range(a+1,b+1,2)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZWwpbg-iSvW0",
+        "outputId": "8cd5e6d3-e0d4-4e6c-c256-c00d2e1eacd6"
+      },
+      "id": "ZWwpbg-iSvW0",
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indique el primer número: -10\n",
+            "Indique el segundo número: 10\n",
+            "El mayor es 10.0 y el menor es -10.0 .\n",
+            "[-10, -8, -6, -4, -2, 0, 2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Ejercicio 1.3. Comparar varias parejas de números\n",
