--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -246,6 +246,58 @@
       "id": "XbpVLZVjqvtK"
     },
     {
+      "cell_type": "code",
+      "source": [
+        "while True:\n",
+        "  try: \n",
+        "    a = float(input(\"Indique el primer número: \"))\n",
+        "    b = float(input(\"Indique el segundo número: \"))\n",
+        "    if a==0:\n",
+        "      print(f\"{a} A es 0\")\n",
+        "      break\n",
+        "    if b==0:\n",
+        "      print(f\"{B} B es 0\")\n",
+        "      break\n",
+        "    if a > b:\n",
+        "      print(f\"El mayor es {a} y el menor es {b}.\")\n",
+        "    elif b > a:\n",
+        "      print(f\"El mayor es {b} y el menor es {a}.\")\n",
+        "    else:\n",
+        "      print(\"Son iguales.\")\n",
+        "  except:\n",
+        "    print(\"Se ha introducido un carácter no válido. \\nFin del programa.\")\n",
+        "    break\n",
+        " \n",
+        " \n",
+        "  \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "OcpenhGhe8Wv",
+        "outputId": "62e51f83-960b-46a4-cd19-617a92441afd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "OcpenhGhe8Wv",
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indique el primer número: 10\n",
+            "Indique el segundo número: 5\n",
+            "El mayor es 10.0 y el menor es 5.0.\n",
+            "Indique el primer número: 0\n",
+            "Indique el segundo número: 10\n",
+            "0.0 A es 0\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "8c57fbec",
       "metadata": {
