--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -274,11 +274,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "OcpenhGhe8Wv",
-        "outputId": "62e51f83-960b-46a4-cd19-617a92441afd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OcpenhGhe8Wv",
+        "outputId": "62e51f83-960b-46a4-cd19-617a92441afd"
       },
       "id": "OcpenhGhe8Wv",
       "execution_count": 94,
@@ -315,6 +315,66 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "while True:\n",
+        "  n = float(input(\"Indique el número que desea escribir: \"))\n",
+        "  if n < 0:\n",
+        "    print(\"Fin del programa.\")\n",
+        "    break\n",
+        "  else:\n",
+        "    print(n)\n",
+        " \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JhrudEhum-ZW",
+        "outputId": "8456437c-e0b1-4551-e350-d2a788b56c2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 606
+        }
+      },
+      "id": "JhrudEhum-ZW",
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indique el número que desea escribir: 2\n",
+            "2.0\n",
+            "Indique el número que desea escribir: 3\n",
+            "3.0\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    624\u001b[0m         \"\"\"\n\u001b[0;32m--> 625\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    626\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-116-345701455e13>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Indique el número que desea escribir: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Fin del programa.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "f2bb8aa7",
       "metadata": {
@@ -335,6 +395,119 @@
         "* En el menú debe haber una opción para realizar las siete operaciones con esos dos números, realizadas todas ellas de una sola vez.\n",
         "* En el menú debe haber una opción para salir del programa.\n",
         "* Utilice **control de errores** para evitar el error de división entre cero. Utilice `try`, `except`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = float(input(\"Indique el primer número: \"))\n",
+        "b = float(input(\"Indique el segundo número: \"))\n",
+        "\n",
+        "\n",
+        "menu = '''\n",
+        "Calculadora\n",
+        "\\t 1. Suma\n",
+        "\\t 2. Resta\n",
+        "\\t 3. Multiplica\n",
+        "\\t 4. Division\n",
+        "\\t 5. Division Entera\n",
+        "\\t 6. Resto o Modulo\n",
+        "\\t 7. Potencias\n",
+        "\\t 8. Todas juntas\n",
+        "\\t 0. Fin\n",
+        "'''\n",
+        "print(menu)\n",
+        "n = input(\"Elija la opción deseada.\")\n",
+        "if n == '1':\n",
+        "  c=a+b\n",
+        "  print(f\"Ha elegido Sumar. El valor es {c} \")\n",
+        "elif n == '2':\n",
+        "  c=a-b\n",
+        "  print(f\"Ha elegido Restar. El valor es {c} \")\n",
+        "elif n == '3':\n",
+        "  c=a*b\n",
+        "  print(f\"Ha elegido Multiplicar.El valor es {c} \")\n",
+        "elif n == '4':\n",
+        "  while True:\n",
+        "    try:\n",
+        "      print(f\"Ha elegido Dividir.El valor es {a/b} \")\n",
+        "      break\n",
+        "    except ZeroDivisionError:\n",
+        "      print(\"El denominador no puede ser cero. Pruebe otra vez.\")\n",
+        "elif n == '5':\n",
+        "  c=a//b\n",
+        "  print(f\"Ha elegido Division Entera.El valor es {c} \")\n",
+        "elif n == '6':\n",
+        "  c=a%b\n",
+        "  print(f\"Ha elegido Resto.El valor es {c} \")\n",
+        "elif n == '7':\n",
+        "  c=a**b\n",
+        "  print(f\"Ha elegido Potencia.El valor es {c} \")\n",
+        "elif n == '8':\n",
+        "  c=a+b\n",
+        "  print(f\"Ha elegido Sumar. El valor es {c} \")\n",
+        "  d=a-b\n",
+        "  print(f\"Ha elegido Restar. El valor es {d} \")\n",
+        "  e=a*b\n",
+        "  print(f\"Ha elegido Multiplicar.El valor es {e} \")\n",
+        "  f=a/b  \n",
+        "#while True:\n",
+        "    #try:\n",
+        "  print(f\"Ha elegido Dividir.El valor es {f} \")\n",
+        "      #break\n",
+        "    #except ZeroDivisionError:\n",
+        "      #print(\"El denominador no puede ser cero. Pruebe otra vez.\")\n",
+        "  g=a//b\n",
+        "  print(f\"Ha elegido Division Entera.El valor es {g} \")\n",
+        "  h=a%b\n",
+        "  print(f\"Ha elegido Resto.El valor es {h} \")\n",
+        "  i=a**b\n",
+        "  print(f\"Ha elegido Potencia.El valor es {i} \")\n",
+        "\n",
+        "    \n",
+        "elif n == '0':\n",
+        "    print(\"Fin del programa\")\n",
+        "else:\n",
+        "    print(\"Opción no válida.\")"
+      ],
+      "metadata": {
+        "id": "ejhSoexLyMqp",
+        "outputId": "df0f5b7d-5337-47c6-cf23-1e7fa42c734b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ejhSoexLyMqp",
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indique el primer número: 5\n",
+            "Indique el segundo número: 2\n",
+            "\n",
+            "Calculadora\n",
+            "\t 1. Suma\n",
+            "\t 2. Resta\n",
+            "\t 3. Multiplica\n",
+            "\t 4. Division\n",
+            "\t 5. Division Entera\n",
+            "\t 6. Resto o Modulo\n",
+            "\t 7. Potencias\n",
+            "\t 8. Todas juntas\n",
+            "\t 0. Fin\n",
+            "\n",
+            "Elija la opción deseada.8\n",
+            "Ha elegido Sumar. El valor es 7.0 \n",
+            "Ha elegido Restar. El valor es 3.0 \n",
+            "Ha elegido Multiplicar.El valor es 10.0 \n",
+            "Ha elegido Dividir.El valor es 2.5 \n",
+            "Ha elegido Division Entera.El valor es 2.0 \n",
+            "Ha elegido Resto.El valor es 1.0 \n",
+            "Ha elegido Resto.El valor es 25.0 \n"
+          ]
+        }
       ]
     },
     {
