--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -329,12 +329,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "JhrudEhum-ZW",
-        "outputId": "8456437c-e0b1-4551-e350-d2a788b56c2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
-        }
+          "height": 628
+        },
+        "id": "JhrudEhum-ZW",
+        "outputId": "8456437c-e0b1-4551-e350-d2a788b56c2e"
       },
       "id": "JhrudEhum-ZW",
       "execution_count": 116,
@@ -471,11 +471,11 @@
         "    print(\"Opción no válida.\")"
       ],
       "metadata": {
-        "id": "ejhSoexLyMqp",
-        "outputId": "df0f5b7d-5337-47c6-cf23-1e7fa42c734b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ejhSoexLyMqp",
+        "outputId": "df0f5b7d-5337-47c6-cf23-1e7fa42c734b"
       },
       "id": "ejhSoexLyMqp",
       "execution_count": 159,
@@ -533,6 +533,51 @@
         "   - 108 -> [1,2,3,4,6,9,12,18,27,36,54,108]\n",
         "   - 109 -> Primo\n",
         "   - 110 -> [1,2,5,10,11,22,55,110]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from random import randint \n",
+        "n=randint(2,1001)   \n",
+        "print(n)\n",
+        "\n",
+        "def frac(a,b):             # función que calcula la parte fraccionaria\n",
+        "  return (a/b) - int(a/b) \n",
+        "def main():\n",
+        "                 # vamos a calcular los divisores de n\n",
+        "  for i in range(1,n+1):\n",
+        "    if frac(n,i)<1e-9: #ponemos <1e-9 y no ==0 para evitar posibles errores de redondeo al dividir\n",
+        "            print(i, end=\",\")\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "if n > 1:\n",
+        "    for i in range(2, int(n/2)+1):\n",
+        "         if (n % i) == 0:\n",
+        "            print(\"It is not a prime number\")\n",
+        "            break\n",
+        "    else:\n",
+        "        print(\"It is a prime number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GBAoSM0ks27I",
+        "outputId": "9bf1c67e-bbf3-4628-fe80-813b0ab8194d"
+      },
+      "id": "GBAoSM0ks27I",
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "101\n",
+            "1,101,It is a prime number\n"
+          ]
+        }
       ]
     },
     {
