--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -555,10 +555,10 @@
         "if n > 1:\n",
         "    for i in range(2, int(n/2)+1):\n",
         "         if (n % i) == 0:\n",
-        "            print(\"It is not a prime number\")\n",
+        "            print(\"No es un numero primo\")\n",
         "            break\n",
         "    else:\n",
-        "        print(\"It is a prime number\")"
+        "        print(\"ES un numero primo\")"
       ],
       "metadata": {
         "colab": {
@@ -596,6 +596,66 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from random import randint\n",
+        "from statistics import mean\n",
+        "\n",
+        "def generaLista1():\n",
+        "    lista1 = []\n",
+        "    for i in range(12):\n",
+        "        lista1.append(randint(0,100))\n",
+        "    return lista1\n",
+        "\n",
+        "lista1 = generaLista1()\n",
+        "print(lista1)\n",
+        "a=mean(lista1)\n",
+        "print(f\"La media es\", a)\n",
+        "\n",
+        "\n",
+        "def generaLista2():\n",
+        "    lista2 = []\n",
+        "    for i in range(12):\n",
+        "        lista2.append(randint(0,100))\n",
+        "    return lista2\n",
+        "\n",
+        "lista2 = generaLista2()\n",
+        "print(lista2)\n",
+        "b=mean(lista2)\n",
+        "print(f\"La media es\", b)\n",
+        "\n",
+        "\n",
+        "if a>b:\n",
+        "  print(f\"La media de la lista 1 es mayor que la media de la lista 2\")\n",
+        "else:\n",
+        "  print(f\"La media de la lista 2 es mayor que la media de la lista 1\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7v4tFZAny4oV",
+        "outputId": "15d0d05d-52f8-4822-fb52-5501be08618b"
+      },
+      "id": "7v4tFZAny4oV",
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[91, 47, 19, 69, 42, 6, 27, 97, 27, 10, 30, 7]\n",
+            "La media es 39.333333333333336\n",
+            "[75, 18, 86, 62, 48, 33, 31, 48, 49, 17, 61, 65]\n",
+            "La media es 49.416666666666664\n",
+            "La media de la lista 2 es mayor que la media de la lista 1\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "a47f544e",
       "metadata": {
@@ -617,6 +677,59 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def rectangulo(n):\n",
+        "    matriz = []\n",
+        "    for i in range(n):\n",
+        "        matriz.append([])\n",
+        "        for j in range(3*n):\n",
+        "            if i>(j*3):\n",
+        "              matriz[i].append(0)\n",
+        "            else:\n",
+        "              matriz[i].append(1)\n",
+        "    return matriz\n",
+        "\n",
+        "n =3 # randint(1,3)\n",
+        "matrix = rectangulo(n)\n",
+        "\n",
+        "for i in range(n):\n",
+        "    print(*matrix[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bduvs1bIKw6s",
+        "outputId": "7e5644e7-a414-40d0-bc7e-67406b0d79e1"
+      },
+      "id": "bduvs1bIKw6s",
+      "execution_count": 229,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 1 1 1 1 1 1 1 1\n",
+            "0 1 1 1 1 1 1 1 1\n",
+            "0 1 1 1 1 1 1 1 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "0lruXr8YPGHP"
+      },
+      "id": "0lruXr8YPGHP",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "e199291b",
       "metadata": {
@@ -631,6 +744,125 @@
         "  - [Frankenstein](https://www.gutenberg.org/ebooks/84) \n",
         "* Mostrar en pantalla cuantas veces aparece cada letra del alfabeto.\n",
         "* Utilice un ***diccionario*** en Python para guardar cada carácter y su frecuencia."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/financieras/pyCourse.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9em07l_GUKgj",
+        "outputId": "84772197-dd7c-401b-b6c8-39839aa0fc38"
+      },
+      "id": "9em07l_GUKgj",
+      "execution_count": 230,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'pyCourse'...\n",
+            "remote: Enumerating objects: 2451, done.\u001b[K\n",
+            "remote: Counting objects: 100% (755/755), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (291/291), done.\u001b[K\n",
+            "remote: Total 2451 (delta 533), reused 643 (delta 461), pack-reused 1696\u001b[K\n",
+            "Receiving objects: 100% (2451/2451), 3.13 MiB | 24.27 MiB/s, done.\n",
+            "Resolving deltas: 100% (1741/1741), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# nos vamos hasta el directorio ejemplos\n",
+        "%cd pyCourse/ejemplos"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WiYOzEw8VhiK",
+        "outputId": "414ba5f3-56ca-4933-f8e8-d28d10cce785"
+      },
+      "id": "WiYOzEw8VhiK",
+      "execution_count": 231,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/pyCourse/ejemplos\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "\n",
+        "palabra = 'father'\n",
+        "f = open(\"frankenstein.txt\")  # abrimos el archivo y lo asignamos a la variable f (file)\n",
+        "libro = f.read()              # leemos el fichero\n",
+        "n = libro.count(palabra)      # contamos la palabra, es case sensitive\n",
+        "f.close()                     # cerramos el fichero\n",
+        "\n",
+        "\n",
+        "\n",
+        "list=['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']\n",
+        "\n",
+        "for i in list:\n",
+        "  ocurrencias = libro.count(i)\n",
+        "  print(i,ocurrencias)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dqY42wyiVmoz",
+        "outputId": "13a1f96a-a2e7-449b-9fd3-d89e98b291d4"
+      },
+      "id": "dqY42wyiVmoz",
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a 25389\n",
+            "b 4529\n",
+            "c 8491\n",
+            "d 16235\n",
+            "e 44023\n",
+            "f 8189\n",
+            "g 5474\n",
+            "h 18936\n",
+            "i 20391\n",
+            "j 346\n",
+            "k 1593\n",
+            "l 12168\n",
+            "m 9959\n",
+            "n 23229\n",
+            "o 23774\n",
+            "p 5626\n",
+            "q 313\n",
+            "r 19637\n",
+            "s 20135\n",
+            "t 28319\n",
+            "u 9881\n",
+            "v 3681\n",
+            "w 7089\n",
+            "x 649\n",
+            "y 7445\n",
+            "z 211\n"
+          ]
+        }
       ]
     },
     {
