--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -893,6 +893,40 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from random import randrange\n",
+        "\n",
+        "l = [randrange(-98,100,2) for i in range(6,16)] + [randrange(-99,100,2)]\n",
+        "l.sort()\n",
+        "print(*l)\n",
+        "\n",
+        "for i,v in enumerate(l):        # i,v son el index y el valor\n",
+        "    if v%2:\n",
+        "        print(v)   # marca la posición del número impar\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hysAkmk3jAI-",
+        "outputId": "de7ad1a4-1bf2-4067-dc75-e6d96988f112"
+      },
+      "id": "hysAkmk3jAI-",
+      "execution_count": 303,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-58 -48 -44 -30 -24 -11 4 20 48 52 88\n",
+            "-11\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "77921deb",
       "metadata": {
@@ -903,6 +937,50 @@
         "* Establezca un procedimiento en el que el código toma la fecha del sistema e indicando su fecha de nacimiento le diga cuántos años tiene.\n",
         "* El programa también le dice cuantos días faltan para que llegue su próximo cumpleaños.\n",
         "* ¿Su código tiene en cuenta los años bisiestos?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import date\n",
+        "\n",
+        "d1 = date(1987,8,27)     #  fecha nacimiento 27/08/1987\n",
+        "d2 = date.today()        #  fecha hoy\n",
+        "d3=date(2022,8,27)\n",
+        "\n",
+        "\n",
+        "def calcula_edad(d1):\n",
+        "    edad = d2.year - d1.year - ((d2.month, d2.day) < (d1.month, d1.day))\n",
+        "    return edad\n",
+        "     \n",
+        "print(\"Tengo una edad de\", calcula_edad(d1), \"años.\")\n",
+        "\n",
+        "from datetime import datetime\n",
+        "\n",
+        "\n",
+        "dias_faltan=abs(d3-d2).days\n",
+        "  \n",
+        "\n",
+        "print(\"Me faltan\",dias_faltan,\"para mi cumpleaños\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iAIRbiN3nlQA",
+        "outputId": "a5d77bd0-bae7-4276-b391-9c399b6d3b30"
+      },
+      "id": "iAIRbiN3nlQA",
+      "execution_count": 378,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tengo una edad de 34 años.\n",
+            "Me faltan 98 para mi cumpleaños\n"
+          ]
+        }
       ]
     },
     {
