--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -55,7 +55,7 @@
         "outputId": "289bf93e-38e7-4b47-a21f-0cc58076bd89"
       },
       "id": "QLiGrzViNTHK",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "outputId": "8cd5e6d3-e0d4-4e6c-c256-c00d2e1eacd6"
       },
       "id": "ZWwpbg-iSvW0",
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +281,7 @@
         "outputId": "62e51f83-960b-46a4-cd19-617a92441afd"
       },
       "id": "OcpenhGhe8Wv",
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +337,7 @@
         "outputId": "8456437c-e0b1-4551-e350-d2a788b56c2e"
       },
       "id": "JhrudEhum-ZW",
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
         "outputId": "df0f5b7d-5337-47c6-cf23-1e7fa42c734b"
       },
       "id": "ejhSoexLyMqp",
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +568,7 @@
         "outputId": "9bf1c67e-bbf3-4628-fe80-813b0ab8194d"
       },
       "id": "GBAoSM0ks27I",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +640,7 @@
         "outputId": "15d0d05d-52f8-4822-fb52-5501be08618b"
       },
       "id": "7v4tFZAny4oV",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +704,7 @@
         "outputId": "7e5644e7-a414-40d0-bc7e-67406b0d79e1"
       },
       "id": "bduvs1bIKw6s",
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,7 +759,7 @@
         "outputId": "84772197-dd7c-401b-b6c8-39839aa0fc38"
       },
       "id": "9em07l_GUKgj",
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -790,7 +790,7 @@
         "outputId": "414ba5f3-56ca-4933-f8e8-d28d10cce785"
       },
       "id": "WiYOzEw8VhiK",
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +829,7 @@
         "outputId": "13a1f96a-a2e7-449b-9fd3-d89e98b291d4"
       },
       "id": "dqY42wyiVmoz",
-      "execution_count": 253,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -914,7 +914,7 @@
         "outputId": "de7ad1a4-1bf2-4067-dc75-e6d96988f112"
       },
       "id": "hysAkmk3jAI-",
-      "execution_count": 303,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +971,7 @@
         "outputId": "b000d26d-5907-4148-9f36-2e73392916fc"
       },
       "id": "iAIRbiN3nlQA",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1053,7 +1053,7 @@
         }
       },
       "id": "VOIeK9cffooz",
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2084,7 +2084,8 @@
         "#lista con repetidos\n",
         "\n",
         "from random import randint\n",
-        "[randint(1,20) for _ in range(10) ]\n",
+        "lista=[randint(1,20) for _ in range(10) ]\n",
+        "lista.sort()\n",
         "print(lista)\n",
         "\n",
         "#lista sin repetidos\n",
@@ -2098,31 +2099,31 @@
       ],
       "metadata": {
         "id": "BC7W0gHFAfJX",
-        "outputId": "b2328db6-58db-43e6-e22d-4af68207e04a",
+        "outputId": "ec48f257-e660-4d52-8020-860437e8b350",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "BC7W0gHFAfJX",
-      "execution_count": 110,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 5, 6, 8, 11, 13, 14, 15, 16, 19]\n",
-            "[1, 3, 4, 7, 9, 10, 11, 15, 16, 18]\n"
+            "[1, 2, 4, 9, 11, 14, 15, 16, 16, 20]\n",
+            "[1, 2, 4, 5, 7, 8, 12, 15, 17, 18]\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 11, 15, 16]"
+              "[1, 2, 4, 15]"
             ]
           },
           "metadata": {},
-          "execution_count": 110
+          "execution_count": 2
         }
       ]
     },
@@ -2139,6 +2140,70 @@
         "* Ordenar la lista sin usar ```sort``` ni ```sorted``` e imprimirla.\n",
         "* Explicar con comentarios del programador lo que hace cada método.\n",
         "* Si el método tiene algún nombre conocido indicarlo, por ejemplo, método de la burbuja."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "l = random.choices(range(1,5), k = 7)      # la lista l contiene 7 elementos con posible repetición\n",
+        "print(l)                                    # La lista final tendrá 7 elementos o menos, no se sabe\n",
+        "\n",
+        "def burbuja(l):\n",
+        "    for i in range(1, len(l)):\n",
+        "        for j in range(0, len(l)-i):\n",
+        "            if(l[j+1] < l[j]):\n",
+        "                l[j], l[j+1] = l[j+1], l[j]   # intercambiamos los valores de la pareja contigua\n",
+        "    return l\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(burbuja(l))\n",
+        "\n",
+        "\n",
+        "\n",
+        "def sort(lista):\n",
+        "    izquierda = []\n",
+        "    centro = []\n",
+        "    derecha = []\n",
+        "    if len(lista) > 1:\n",
+        "        pivote = lista[0]\n",
+        "        for i in lista:\n",
+        "            if i < pivote:\n",
+        "                izquierda.append(i)\n",
+        "            elif i == pivote:\n",
+        "                centro.append(i)\n",
+        "            elif i > pivote:\n",
+        "                derecha.append(i)\n",
+        "        #print(izquierda+[\"-\"]+centro+[\"-\"]+derecha)\n",
+        "        return sort(izquierda)+centro+sort(derecha)\n",
+        "    else:\n",
+        "      return lista\n",
+        "\n",
+        "print(l)\n",
+        "print(sort(l))"
+      ],
+      "metadata": {
+        "id": "ge-cnhpP-66_",
+        "outputId": "ceaf75e3-648b-4295-8faf-00204e53fcbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ge-cnhpP-66_",
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 1, 1, 3, 1, 4, 2]\n",
+            "[1, 1, 1, 2, 2, 3, 4]\n",
+            "[1, 1, 1, 2, 2, 3, 4]\n",
+            "[1, 1, 1, 2, 2, 3, 4]\n"
+          ]
+        }
       ]
     },
     {
