--- a/practicas/practica1.ipynb
+++ b/practicas/practica1.ipynb
@@ -2185,11 +2185,11 @@
         "print(sort(l))"
       ],
       "metadata": {
-        "id": "ge-cnhpP-66_",
-        "outputId": "ceaf75e3-648b-4295-8faf-00204e53fcbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ge-cnhpP-66_",
+        "outputId": "ceaf75e3-648b-4295-8faf-00204e53fcbf"
       },
       "id": "ge-cnhpP-66_",
       "execution_count": 34,
@@ -2222,6 +2222,55 @@
         "* Imprima las listas.\n",
         "* Imprima la desviación típica de cada lista, indicando cuál es la mayor, si la de los pares o la de los impares.\n",
         "* Utilice funciones."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "lista = list(range(-20,20))                    # creamos una lista con los números correlativos entre 10 y 40\n",
+        "lista_original = random.choices(lista, k=15)  # elegimos aleatoriamente 15 números de la lista con posible repetición\n",
+        "print(\"Lista original:         \", lista_original)\n",
+        "lista_original.sort()\n",
+        "print(\"Lista original ordenada:\", lista_original)\n",
+        "#lista_pares = []\n",
+        "#lista_impares = []\n",
+        "\n",
+        "def par_impar(lista_original):\n",
+        "  lista_pares = []\n",
+        "  lista_impares = []\n",
+        "\n",
+        "  for i in lista_original:\n",
+        "    if i%2:\n",
+        "        lista_pares.append(i)\n",
+        "        lista_pares.sort()\n",
+        "    else:\n",
+        "        lista_impares.append(i)\n",
+        "        lista_impares.sort()\n",
+        "\n",
+        "print(\"Lista con los pares:\",lista_impares)\n",
+        "print(\"Lista con los impares:  \", lista_impares)"
+      ],
+      "metadata": {
+        "id": "MOrMGfeGDURj",
+        "outputId": "708f7812-0fa7-467a-a68b-2e024d8ae0cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        }
+      },
+      "id": "MOrMGfeGDURj",
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-f2c03bbef33c>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    def par_impar(a)\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
       ]
     },
     {
